[package]
name = "psst-core"
version = "0.1.0"
edition = "2021"

[dependencies]
psst-protocol = { path = "../psst-protocol" }

# Common
byteorder = { version = "1.5.0" }
crossbeam-channel = { version = "0.5.13" }
log = { version = "0.4.22" }
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = { version = "0.2.19" }
oauth2 = { version = "4.4.2" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132" }
socks = { version = "0.3.4" }
ureq = { version = "2.10.1", features = ["json"] }
url = { version = "2.5.2" }
quick-protobuf = { version = "0.8.1" }
rand = { version = "0.8.5" }

# Cryptography
aes = { version = "0.8.4" }
ctr = { version = "0.9.2" }
hmac = { version = "0.12.1" }
sha-1 = { version = "0.10.1" }
shannon = { version = "0.2.0" }
