[package]
name = "psst-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
psst-core = { path = "../psst-core" }

# Common
directories = { version = "5.0.1" }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }
once_cell = { version = "1.20.2" }
parking_lot = { version = "0.12.3" }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = { version = "1.0.132" }
ureq = { version = "2.10.1", features = ["json", "socks-proxy"] }

# GUI
druid = { git = "https://github.com/jpochyla/druid", branch = "psst", features = [
  "im",
  "image",
  "jpeg",
  "png",
  "serde",
] }
open = { version = "5.3.0" }
